--- a/SistemaInventario/Content/Diseños/tarjetas.css
+++ b/SistemaInventario/Content/Diseños/tarjetas.css
@@ -47,3 +47,13 @@
             font: size 16px;
             font-weight: 300;
         }
+
+/*:::::::::::::::::::::::::MODIFICACIONES PARA VISTA MostrarCarrito.cshtml:::::::::::::::*/
+.content.cars {
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
+
+img {
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+}
