--- a/SistemaInventario/Views/Compras/MostrarCompras.cshtml
+++ b/SistemaInventario/Views/Compras/MostrarCompras.cshtml
@@ -5,11 +5,11 @@
     var Compras = ViewBag.Compras;
 }
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <center>
-                    <h1>Listado de Ventas</h1>
+                    <h1>Listado de compras</h1>
                 </center>
                 <br />
                 <button class="btn btn-success"
