--- a/SistemaInventario/Views/Home/Index.cshtml
+++ b/SistemaInventario/Views/Home/Index.cshtml
@@ -1,22 +1,57 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<link href="~/Content/Diseños/index.css" rel="stylesheet" />
 
-<div class="jumbotron">
-    Carrusel
+<div class="Contenedor" >
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner caret">
+            <div class="carousel-item active">
+                <img class="imgCarrusel d-block " src="~/Content/img_cars/4.jpg" alt="First slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/1.jpg" alt="Third slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/3.jpg" alt="Third slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/car4.jpg" alt="Third slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/car5.jpg" alt="Third slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/white-black-car.jpg" alt="Third slide">
+            </div>
+            <div class="imgCarrusel carousel-item">
+                <img class="d-block " src="~/Content/img_cars/yellow-black-car.jpg" alt="Third slide">
+            </div>
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
-
-<div class="row">
-    <div class="col-md-3">
-        contenedor 1
-    </div>
-    <div class="col-md-3">
-        Contenedor 2
-    </div>
-    <div class="col-md-3">
-        Contenedor 3
-    </div>
-    <div class="col-md-3">
-        Contenedor 4
+<div class="Contenedor">
+    <div class="row">
+        <div class="col-md-3">
+            contenedor 1
+        </div>
+        <div class="col-md-3">
+            Contenedor 2
+        </div>
+        <div class="col-md-3">
+            Contenedor 3
+        </div>
+        <div class="col-md-3">
+            Contenedor 4
+        </div>
     </div>
 </div>
