--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -35,51 +35,89 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto py-4 py-md-0">
+
                                     @if (Session["UserId"] != null)
                                     {
+
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Autos</a>
                                             <div class="dropdown-menu">
                                                 <a class="dropdown-item" href="https://localhost:44366/Inventario/MostrarInventario">Ver autos</a>
-                                                <a class="dropdown-item" href="https://localhost:44366/Marcas/MostrarMarcas">Marcas</a>
+                                                @if (permisos == true)
+                                                {
+                                                    <a class="dropdown-item" href="https://localhost:44366/Marcas/MostrarMarcas">Marcas</a>
+
+                                                }
                                             </div>
                                         </li>
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Compras</a>
                                             <div class="dropdown-menu">
                                                 <a class="dropdown-item" href="https://localhost:44366/Compras/MostrarCompras">Ver compras</a>
+                                                @if (permisos == true){
                                                 <a class="dropdown-item" href="https://localhost:44366/Proveedores/MostrarProveedores">Proveedores</a>
+                                                }
                                             </div>
                                         </li>
-                                        <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ventas</a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="https://localhost:44366/Ventas/MostrarVentas">Ver ventas</a>
-                                                <a class="dropdown-item" href="https://localhost:44366/Clientes/MostrarClientes">Clientes</a>
-                                            </div>
-                                        </li>
+                                        if (permisos == true)
+                                        {
+
+                                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ventas</a>
+                                                <div class="dropdown-menu">
+                                                    <a class="dropdown-item" href="https://localhost:44366/Ventas/MostrarVentas">Ver ventas</a>
+                                                    <a class="dropdown-item" href="https://localhost:44366/Clientes/MostrarClientes">Clientes</a>
+                                                </div>
+                                            </li>
                                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                                 <a class="nav-link" href="https://localhost:44366/Usuarios/MostrarUsuarios">Usuario</a>
                                             </li>
-                                        <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="https://localhost:44366/Carrito/MostrarCarrito"><i style="font-size:19px" class="fas fa-shopping-cart"></i></a>
+                                        }
+                                            <li class="nav-item i pl-4 pl-md-0 ml-0 ml-md-4">
+                                                <a class="nav-link" href="https://localhost:44366/Carrito/MostrarCarrito"><i style="font-size:19px" class="fas fa-shopping-cart"></i></a>
+                                                <div class="dropdown-menu card">
+                                                    <div class="card navb">
+                                                        <div class="fila">
+                                                            <div class="columna 1">
+                                                                <img style="border-radius:5px; width: 100px; height: 100px;" src="~/Content/img_cars/blackCar.jpg" alt="">
+                                                            </div>
+                                                            <div class="columna 2">
+                                                                <p class=" descripcion">Modelo</p>
+                                                                <p class=" descripcion">Marca </p>
+                                                            </div>
+                                                            <i class="fas fa-times-circle"></i>
+                                                        </div>
+                                                        <div class="fila">
+                                                            <div class="columna precio">
+                                                                <p class="precio">Total</p>
+                                                            </div>
+                                                            <div class="columna total">
+                                                                <p class="total">$2000.00</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <button class="btn">
+                                                        <a href="https://localhost:44366/Carrito/MostrarCarrito">Ver detalles de carrrito</a>
+                                                    </button>
+                                                </div>
+
+                                            </li>
+                                        }
+                                        <li class="nav-item i pl-4 pl-md-0 ml-0 ml-md-4">
+                                            <a class="dropdown-toggle nav-link navbar-brand" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i style="font-size: 25px" class="fas fa-user-circle"></i> @*<h5 style="background-color: #e5bfff; color: #1e1732; border-radius: 100%; height: 30px; width: 30px; padding:5px" >AT</h5>*@ </a>
+                                            <div class="dropdown-menu">
+                                                @if (Session["UserId"] != null)
+                                                {
+                                                    <a class="dropdown-item" href="https://localhost:44366/Home/LogOut">Salir</a>
+                                                }
+                                                else
+                                                {
+                                                    <a class="dropdown-item" href="https://localhost:44366/Home/Login">Iniciar Sesión</a>
+                                                    <a class="dropdown-item" href="https://localhost:44366">Registrarse</a>
+                                                }
+                                            </div>
                                         </li>
-                                    }
-                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="dropdown-toggle nav-link navbar-brand" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">@*<i style="font-size: 25px" class="fas fa-user-circle"</i>>*@ <h5 style="background-color: #e5bfff; color: #1e1732; border-radius: 100%; height: 30px; width: 30px; padding:5px" >AT</h5> </a>
-                                        <div class="dropdown-menu">
-                                            @if (Session["UserId"] != null)
-                                            {
-                                                <a class="dropdown-item" href="https://localhost:44366/Home/LogOut">Salir</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="https://localhost:44366/Home/Login">Iniciar Sesión</a>
-                                                <a class="dropdown-item" href="https://localhost:44366">Registrarse</a>
-                                            }
-                                        </div>
-                                    </li>
-                                </ul>
+                                    </ul>
                             </div>
                         </nav>
                     </div>
