--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -16,7 +16,7 @@
     ViewBag.Title = "MostrarAutos";
 }
 <link href="~/Content/Diseños/tarjetas.css" rel="stylesheet" />
-<center><h1>Listado de Autos</h1></center>
+<center><h1>Autos</h1></center>
 <br />
 @if (permisos == true)
 {
