--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Lista Clientes</h1></center>
+            <center><h1>Clientes</h1></center>
             <br />
             <button class="btn agregarBtn" onclick="window.location.href='/Clientes/AgregarOEditarClientes'"><i class="fas fa-plus"></i> Agregar</button>
 
