--- a/SistemaInventario/Views/Compras/MostrarCompras.cshtml
+++ b/SistemaInventario/Views/Compras/MostrarCompras.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-8">
                 <center>
-                    <h1>Listado de compras</h1>
+                    <h1>Compras</h1>
                 </center>
                 <br />
                 <button class="btn btn-success"
