--- a/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
+++ b/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Listado de Marcas</h1></center>
+            <center><h1>Marcas</h1></center>
             <br />
             <button class="btn agregarBtn" onclick="window.location.href='/Marcas/AgregarOEditarMarcas'"><i class="fas fa-plus"></i>Agregar Marca</button>
             <br />
