--- a/SistemaInventario/Views/Proveedores/MostrarProveedores.cshtml
+++ b/SistemaInventario/Views/Proveedores/MostrarProveedores.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-12">
             <center>
-                <h1>Listado de proveedores</h1>
+                <h1>Proveedores</h1>
             </center>
             <br />
             <button class="btn agregarBtn"
