--- a/SistemaInventario/Views/Usuarios/MostrarUsuarios.cshtml
+++ b/SistemaInventario/Views/Usuarios/MostrarUsuarios.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
             <center>
-                <h1>Listado de usuarios</h1>
+                <h1>Usuarios</h1>
             </center>
             <br />
             <button class="btn agregarBtn"
