--- a/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
+++ b/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
@@ -10,7 +10,14 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-8">
-            <h2>Agregar Proveedores</h2>
+            @if (Model.idVenta > 0)
+            {
+                <h2>Editar venta</h2>
+            }
+            else
+            {
+                <h2>Agregar venta</h2>
+            }
 
             @using (Html.BeginForm())
             {
@@ -18,8 +25,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Marca: </label>
-                        @Html.DropDownListFor(x => x.fk_auto, (IEnumerable<SelectListItem>)ViewBag.listaAutos,  new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.fk_auto, null,htmlAttributes: new { @class = "text-danger" })
+                        @Html.DropDownListFor(x => x.fk_auto, (IEnumerable<SelectListItem>)ViewBag.listaAutos, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.fk_auto, null, htmlAttributes: new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
@@ -27,7 +34,7 @@
                         @Html.TextBoxFor(x => x.cantidad, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.cantidad, null, new { @class = "text-danger" })
                     </div>
-                   
+
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-success">Guardar</button>
