--- a/SistemaInventario/Views/Ventas/MostrarVentas.cshtml
+++ b/SistemaInventario/Views/Ventas/MostrarVentas.cshtml
@@ -1,30 +1,40 @@
 ﻿@using DAL.Models
+@using DAL.Seguridad
 @model List<tabDetalleVentas>
-
-
-
-
 @{
     ViewBag.Title = "MostrarProductos";
     var ventas = ViewBag.Ventas;
-    
+    var permisos = false;
 }
 
-
+@if (Session["UserId"] != null)
+{
+    var id = Session["UserId"];
+    var idStr = id.ToString();
+    var idInt = int.Parse(idStr);
+    permisos = PermisosPorRol.IsAdmin(idInt);
+}
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8">
             <center>
-                <h1>Listado de Ventas</h1>
+                @if (permisos == true)
+                {
+                    <h1>Ventas</h1>
+                }
+                else
+                {
+                    <h1>Mis compras</h1>
+                }
             </center>
             <br />
 
             <br />
             <table class="table ">
                 <thead>
-                  <tr>
-                   <th></th>
-                  </tr>
+                    <tr>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
                     @if (ventas != null)
@@ -76,7 +86,7 @@
 
                                         </tbody>
                                     </table>
-                                   
+
                                 </td>
                             </tr>
 
@@ -84,8 +94,8 @@
                         }
 
                     }
-                   
-                   
+
+
 
                 </tbody>
             </table>
