Modificación de diseño navbar y tarjetas

--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -101,9 +101,12 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <button class="btn">
+                                                    <center>
+                                                    <div class="buttonNav">
                                                         <a href="https://localhost:44366/Carrito/MostrarCarrito">Ver detalles de carrrito</a>
-                                                    </button>
+                                                    </div>
+                                                    </center>
+                                                        
                                                 </div>
 
                                             </li>
