--- a/SistemaInventario/Content/Diseños/tarjetas.css
+++ b/SistemaInventario/Content/Diseños/tarjetas.css
@@ -14,7 +14,7 @@
     justify-content: center;
     margin: auto;
     margin-bottom: 20px;
-    
+    border-radius: 10%;
 }
 
     .containerCards .card {
@@ -56,5 +56,4 @@
 
 img {
     width: 100%;
-    border-radius: 20px 20px 0 0;
 }
